--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
 <style>
   body{
-    background-color:rgb (0, 103,194);
+    background-color: rgb(0, 103, 194);
   }
     
       
