--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
   </head>
   <body>
     
-  <h1>Play Station One</h1>
-    <h2>What is the Play Station One</h2>
-  
+  <h1>Play Station</h1>
+    <h2>What is the Play Station</h2>
+      <p>play station is a gaming brand that consists of four 
+      home video game consoles, as well as a media center, an 
+      onlinw service. It is created and owned by sony interactive
+      entertainment since Decmeber 3, 1994, with the launch of 
+      the original Playstation in Japen Which is the Playstation One<p>
   </body>
   
  
