--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
       the original Playstation in Japen Which is the Playstation One<p>
       
       <h3>Playstation one</h3>
+      <p>The console's origins date back to 1988 where it was originally 
+          a joint project between Nintendo and Sony to create a CD-ROM 
+          for the Super Famicom.[17] Although Nintendo denied the existence
+          of the Sony deal as late as March 1991,[18] Sony revealed a Super 
+          Famicom with a built-in CD-ROM drive, that incorporated Green Book 
+          technology or CD-i, called "Play Station" (also known as SNES-CD) 
+          at the Consumer Electronics Show in June 1991. However, a day after 
+          the announcement at CES, Nintendo announced that it would be breaking 
+          its partnership with Sony, opting to go with Philips instead but using 
+          the same technology.[19] The deal was broken by Nintendo after they were
+          unable to come to an agreement on how revenue would be split between the 
+          two companies.[19] The breaking of the partnership infuriated Sony President 
+          Norio Ohga, who responded by appointing Kutaragi with the responsibility of 
+          developing the PlayStation project to rival Nintendo.[19]<p>
   </body>
   
  
