--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       entertainment since Decmeber 3, 1994, with the launch of 
       the original Playstation in Japen Which is the Playstation One<p>
       
-      <h3>Playstation one</h3>
+      <h3>History</h3>
       <p>The console's origins date back to 1988 where it was originally 
           a joint project between Nintendo and Sony to create a CD-ROM 
           for the Super Famicom. Although Nintendo denied the existence
@@ -49,7 +49,8 @@
           Norio Ohga, who responded by appointing Kutaragi with the responsibility of 
           developing the PlayStation project to rival Nintendo.<p>
       <img src="//upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Playstation_logo_colour.svg/250px-Playstation_logo_colour.svg.png"
-          id="logo" >
+       id="logo" >
+      <h4>Play Station One</h4>
   </body>
   
  
