--- a/index.html
+++ b/index.html
@@ -44,12 +44,23 @@
           its partnership with Sony, opting to go with Philips instead but using 
           the same technology. The deal was broken by Nintendo after they were
           unable to come to an agreement on how revenue would be split between the 
-          two companies.[19] The breaking of the partnership infuriated Sony President 
+          two companies. The breaking of the partnership infuriated Sony President 
           Norio Ohga, who responded by appointing Kutaragi with the responsibility of 
           developing the PlayStation project to rival Nintendo.<p>
       <img src="//upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Playstation_logo_colour.svg/250px-Playstation_logo_colour.svg.png"
        id="logo" >
       <h4>Play Station One</h4>
+      <p>The original PlayStation, released in Japan on December 3, 1994, 
+          was the first of the ubiquitous PlayStation series of console 
+          and hand-held game devices. It has included successor consoles 
+          and upgrades including the Net Yaroze a special black PlayStation 
+       with tools and instructions to program PlayStation games and applications
+          PSone a smaller version of the original and the PocketStation 
+          a handheld which enhances PlayStation games and also acts as a memory card. 
+          t was part of the fifth generation of video game consoles competing against
+          the Sega Saturn and the Nintendo 64. By December 2003, the PlayStation and 
+          PSone had shipped a combined total of 102.49 million units eventually 
+          becoming the first video game console to sell 120 million units.</p>
   </body>
   
  
