--- a/bib.html
+++ b/bib.html
@@ -12,10 +12,37 @@
     a {
      color: white;   
     }
+        ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
   </style>
   </head>
   <body>
   <h1>Bibliography</h1>
+            <ul>
+  <li><a href="https://preston6ediger.github.io/PS1/index.html">Home</a></li>
+  <li><a href="https://preston6ediger.github.io/PS1/bib.html">Bibliography</a></li>
+      </ul>
   <p><a href="https://en.wikipedia.org/wiki/PlayStation">https://en.wikipedia.org/wiki/PlayStation</a><br>
   
   </p>
