--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ li a:hover {
   <h1>Play Station</h1>
       <ul>
   <li><a href="https://preston6ediger.github.io/PS1/index.html">Home</a></li>
-  <li><a href="https://preston6ediger.github.io/PS1/bib.htmls">Bibliography</a></li>
+  <li><a href="https://preston6ediger.github.io/PS1/bib.html">Bibliography</a></li>
       </ul>
     <h2>What is the Play Station</h2>
       <p>play station is a gaming brand that consists of four 
