--- a/bib.html
+++ b/bib.html
@@ -44,6 +44,8 @@ li a:hover {
   <li><a href="https://preston6ediger.github.io/PS1/bib.html">Bibliography</a></li>
       </ul>
   <p><a href="https://en.wikipedia.org/wiki/PlayStation">https://en.wikipedia.org/wiki/PlayStation</a><br>
+      <a href="https://www.playstation.com/en-ca/explore/playstation-vr/gallery/">
+      https://www.playstation.com/en-ca/explore/playstation-vr/gallery/</a>
   
   </p>
    
